--- a/views/index.pug
+++ b/views/index.pug
@@ -23,20 +23,10 @@ block content
                 each dropdownOption in dropdownOptions
                   option(value=dropdownOption.value)= dropdownOption.name
               
-        .slds-form-element
-          label.slds-form-element__label.slds-p-top_medium(for='Text') // Label for Text Field 1
+          label.slds-form-element__label.slds-p-top_medium(for='Text')
             abbr.slds-required(title='required')
             | Text *
           .slds-form-element__control
-            input#Text1.slds-input.js-activity-setting(required='', placeholder='', name='text') // Input for Text Field 1
-
-        .slds-form-element
-          label.slds-form-element__label.slds-p-top_medium(for='Text2') // Label for Text Field 2
-            abbr.slds-required(title='required')
-            | Text 2 *
-          .slds-form-element__control
-            input#Text2.slds-input.js-activity-setting(required='', placeholder='', name='text2') // Input for Text Field 2
-
-        // Add more text fields as needed
+            input#Text.slds-input.js-activity-setting(required='', placeholder='', name='text')
 
     footer.slds-card__footer
