--- a/views/index.pug
+++ b/views/index.pug
@@ -29,7 +29,7 @@ block content
           .slds-form-element__control
             input#Text.slds-input.js-activity-setting(required='', placeholder='', name='text')
 
-           label.slds-form-element__label.slds-p-top_medium(for='Text1')
+           label.slds-form-element__label.slds-p-top_medium(for='Text')
             abbr.slds-required(title='required')
             | Text1 *
           .slds-form-element__control
