--- a/views/index.pug
+++ b/views/index.pug
@@ -23,4 +23,11 @@ block content
                 each dropdownOption in dropdownOptions
                   option(value=dropdownOption.value)= dropdownOption.name
               
+          label.slds-form-element__label.slds-p-top_medium(for='Text')
+            abbr.slds-required(title='required')
+            | Text *
+          .slds-form-element__control
+            input#Text.slds-input.js-activity-setting(required='', placeholder='', name='text')
+
+
     footer.slds-card__footer
