--- a/views/index.pug
+++ b/views/index.pug
@@ -29,5 +29,11 @@ block content
           .slds-form-element__control
             input#Text.slds-input.js-activity-setting(required='', placeholder='', name='text')
 
+           label.slds-form-element__label.slds-p-top_medium(for='Text1')
+            abbr.slds-required(title='required')
+            | Text1 *
+          .slds-form-element__control
+            input#Text1.slds-input.js-activity-setting(required='', placeholder='', name='text1')
+
 
     footer.slds-card__footer
