--- a/views/index.pug
+++ b/views/index.pug
@@ -23,11 +23,11 @@ block content
                 each dropdownOption in dropdownOptions
                   option(value=dropdownOption.value)= dropdownOption.name
               
-          label.slds-form-element__label.slds-p-top_medium(for='Text')
+          label.slds-form-element__label.slds-p-top_medium(for='Text1')
             abbr.slds-required(title='required')
             | Text *
           .slds-form-element__control
-            input#Text.slds-input.js-activity-setting(required='', placeholder='', name='text')
+            input#Text1.slds-input.js-activity-setting(required='', placeholder='', name='text1')
 
 
 
